apps/70-tools/homepage/overlays/dev/redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: tools
spec:
  redirectScheme:
    scheme: https
    permanent: true
